--- a/Web/FristWindow.html
+++ b/Web/FristWindow.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>小泉网</title>
-    <link rel="icon" href="../images/h.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>xiaoquanwang</title>
     <link rel="stylesheet" href="divClass.css">
-    <link rel="stylesheet" href="flexCSS.css">
-    <script type="module" src="Win1.js"></script>
 </head>
-<body>
-<div class="div-flex" id="menu">
 
-    <div class="one">
-        <div id="document" class="hover-div">资料区</div>
-        <div id="activity" class="hover-div">功能区</div>
-        <div id="bolg" class="hover-div">博客区</div>
-        <div id="game" class="hover-div">游戏区</div>
-        <div id="manage" class="hover-div">后台</div>
+<body>
+    <div class="div-main1">
+        <div class="one">
+            <ul>
+                <li>
+                    <a href="#document">复习区</a>
+                </li>
+                <li>
+                    <a href="#acticity">功能区</a>
+                </li>
+                <li>
+                    <a href="#blog">博客区</a>
+                </li>
+                <li>
+                    <a href="game">游戏区</a>
+                </li>
+                <li>
+                    <a href="#manage">后台</a>
+                </li>
+            </ul>
+        </div>
+        <div class="two">
+
+        </div>
     </div>
-    <div class="two">
-        222222222222222222
-    </div>
-</div>
 </body>
+
 </html>
